--- a/membros.html
+++ b/membros.html
@@ -26,6 +26,7 @@
         <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
         <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
         <a href="#" id="btn-sair" style="display: none;">Sair</a>
+        <a href="listagemcadastro.html" id="btn-listagemcadastro" style="display: none;">Usuários</a>
       </div>
     </div>
   </header>
