--- a/listas.html
+++ b/listas.html
@@ -10,25 +10,26 @@
 <body>
 
 <header class="navbar">
-  <div class="container">
-    <a href="index.html" class="logo-area">
-      <img src="images/logo-concha.png" alt="Logo Concha" class="logo" />
-    </a>
+    <div class="container">
+      <a href="index.html" class="logo-area">
+        <img src="images/logo-concha.png" alt="Logo Concha" class="logo" />
+      </a>
 
-    <nav class="nav-links">
-      <a href="filmes.html">Filmes</a>
-      <a href="membros.html">Membros</a>
-      <a href="listas.html">Listas</a>
-    </nav>
+      <nav class="nav-links">
+        <a href="filmes.html">Filmes</a>
+        <a href="membros.html">Membros</a>
+        <a href="listas.html">Listas</a>
+      </nav>
 
-    <div class="nav-actions">
-      <a href="login.html" id="btn-entrar">Entrar</a>
-      <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
-      <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
-      <a href="#" id="btn-sair" style="display: none;">Sair</a>
+      <div class="nav-actions">
+        <a href="login.html" id="btn-entrar">Entrar</a>
+        <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
+        <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
+        <a href="#" id="btn-sair" style="display: none;">Sair</a>
+        <a href="listagemcadastro.html" id="btn-listagemcadastro" style="display: none;">Usuários</a>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
 
 <main>
   <header>
