--- a/perfil.html
+++ b/perfil.html
@@ -6,9 +6,7 @@
   <title>Perfil - Concha</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="dark-theme.css" />
-</head>
-<body class="dark-theme">
-    <header class="navbar">
+<header class="navbar">
     <div class="container">
       <a href="index.html" class="logo-area">
         <img src="images/logo-concha.png" alt="Logo Concha" class="logo" />
@@ -19,6 +17,14 @@
         <a href="membros.html">Membros</a>
         <a href="listas.html">Listas</a>
       </nav>
+
+      <div class="nav-actions">
+        <a href="login.html" id="btn-entrar">Entrar</a>
+        <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
+        <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
+        <a href="#" id="btn-sair" style="display: none;">Sair</a>
+        <a href="listagemcadastro.html" id="btn-listagemcadastro" style="display: none;">Usuários</a>
+      </div>
     </div>
   </header>
 
